Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43589

QTextTable renders inconsistent cell borders

    XMLWordPrintable

Details

    • 87748cc18e6a0d9e65933aa2462dc78ab8f9f22e 81554aca81ec4e161ff9fa236e3d76fa950fec97 (qt/qtbase/dev)

    Description

      A QTextDocument with a table with borders, paints the borders irregularly on screen - and on printer, and in a PDF...

      I'll attach screenshots.

      This is especially visible in a PDF (because you can zoom in), or on screen with printer.scale(2,2) ... but it's also visible without scaling, if you look closely.

      tableFormat.setCellPadding( 1.88977 ) makes it worse, more rounding problems.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            njeisecke Nils Jeisecke
            dfaure David Faure (Private)
            Votes:
            8 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes