QTextDocumentLayout: Avoid table border drawing artifacts

As borders are always painted for single cells any rounding errors that
occur when mapping from fixed point numbers to integers during raster
painting will cause ugly drawing artifacts like extra pixels between
cells or borders that overlap.

To avoid this the following values are being rounded:
- table offset
- column positions and widths
- row positions and cell heights

For the column positions and widths the distribution constraints (total
table width) are respected.

Task-number: QTBUG-43589
Change-Id: I6308c113f8f9be3db8e9267629f26b5d65d2d7c7
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>